<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ActivityE_Mading.LoginUserActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:scaleType="centerCrop"
                android:src="@drawable/back_header"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/logo_magazine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/magazine"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_emading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textColor="@android:color/white"
                android:layout_below="@+id/logo_magazine"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_user"
                android:background="@drawable/back_icon"
                android:padding="10dp"
                android:layout_below="@+id/tv_emading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="20sp"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pass_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass"
                        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="20sp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login"
                        android:onClick="goLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_login"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Or"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20sp"/>
                    <Button
                        android:id="@+id/btn_gosignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_signup"
                        android:text="@string/signUp"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_weight="1"/>

                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
